@@ -1,4 +1,5 @@
 Version 0.0.3 (not yet released):
+- Documentation: Updated doc/cvtool-example-nasa-script.sh.
 - CVL: Simplified the handling of fields, especially the input/output.
 - Gnulib update.
 - Autoconf update: build-aux/c.m4 is not needed anymore.
